force-app/main/default/objects/Tax_Directive__c/Tax_Directive__c.object-meta.xml
<CustomObject>
    <label>Tax Directive</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Tax Directive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Directives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>