force-app/main/default/objects/Tax_Directive__c/fields/Approved_Deemed_Remuneration__c.field-meta.xml
<CustomField>
    <fullName>Approved_Deemed_Remuneration__c</fullName>
    <label>Approved Deemed Remuneration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>