force-app/main/default/objects/Tax_Directive__c/fields/Contributions_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Contributions_Allowed__c</fullName>
    <label>Contributions Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>