force-app/main/default/objects/Tax_Directive__c/fields/Deduction_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Frequency__c</fullName>
    <label>Deduction Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>