force-app/main/default/objects/Tax_Directive__c/fields/Gross_Amount_Payee__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Payee__c</fullName>
    <label>Gross Amount Payee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>