force-app/main/default/objects/Tax_Directive__c/fields/IT88_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>IT88_Ref_No__c</fullName>
    <label>IT88 Ref No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>