force-app/main/default/objects/Tax_Directive__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tax Directives</relationshipLabel>
    <relationshipName>Tax_Directives</relationshipName>
    <type>Lookup</type>
</CustomField>