force-app/main/default/objects/Tax_Directive__c/fields/Payees__c.field-meta.xml
<CustomField>
    <fullName>Payees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payees</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Directives</relationshipLabel>
    <relationshipName>Tax_Directives</relationshipName>
    <type>Lookup</type>
</CustomField>