force-app/main/default/objects/Tax_Directive__c/fields/Reason_for_Directive__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Directive__c</fullName>
    <label>Reason for Directive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Death Before Retirement</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Retirement due to ill health</fullName>
            </value>
            <value>
                <fullName>Provident Fund – Deemed to be Retirement</fullName>
            </value>
            <value>
                <fullName>Transfer on Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>