force-app/main/default/objects/Tax_Directive__c/fields/Tax_Directive_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Directive_Issue_Date__c</fullName>
    <label>Tax Directive Issue Date</label>
    <type>Date</type>
</CustomField>