force-app/main/default/objects/Tax_Directive__c/fields/Tax_Free_Portion__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Portion__c</fullName>
    <label>Tax Free Portion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>