force-app/main/default/objects/Tax_Directive__c/fields/Tax_Payer_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payer_Number__c</fullName>
    <label>Tax Payer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>