force-app/main/default/objects/Tax_Directive__c/fields/Tax_Payer_s_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payer_s_Annual_Income__c</fullName>
    <inlineHelpText>Annual Income includes all income i.e. salary, earnings emoluments, wages, bonus, fees gratuities, commission, pension, overtime, royalties, stipend, allowances, benefits, interest, share of profits, rental income, compensation and honorarium.</inlineHelpText>
    <label>Tax Payer&apos;s Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>