force-app/main/default/objects/Tax_Directive__c/fields/Tax_Resident__c.field-meta.xml
<CustomField>
    <fullName>Tax_Resident__c</fullName>
    <label>Tax Resident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>