force-app/main/default/objects/Tax_Directive__c/fields/Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Tax_Year__c</fullName>
    <inlineHelpText>Please enter the year only (4 digits)  Example: 2022</inlineHelpText>
    <label>Tax Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>