force-app/main/default/objects/Tax_Directive__c/fields/Validity_End__c.field-meta.xml
<CustomField>
    <fullName>Validity_End__c</fullName>
    <label>Validity End</label>
    <type>Date</type>
</CustomField>