force-app/main/default/objects/Tax_Directive__c/fields/Validity_Start__c.field-meta.xml
<CustomField>
    <fullName>Validity_Start__c</fullName>
    <label>Validity Start</label>
    <type>Date</type>
</CustomField>